# motrex_radar-camera_fusion

./: .gitignore  tash
4fn_basic_viewer/: CMakeLists.txt  package.xml
4fn_basic_viewer/include/: data_handler.hpp  radar_packet.hpp  socket.hpp
4fn_basic_viewer/share/: srs.rviz  srs_radar.launch
4fn_basic_viewer/src/: data_handler.cpp  main.cpp  socket.cpp
autocal/: CMakeLists.txt  package.xml  (+2 more)
perception/: CMakeLists.txt  package.xml  read.txt  setup.py
perception/config/: camera_intrinsic.yaml  camera_radar_extrinsic.yaml  detector.yaml  roi_lanes.yaml
perception/launch/: bringup.launch  perception.launch  rviz.launch
perception/msg/: Association.msg
perception/src/: real_gui.py
perception/src/nodes/: association_node.py  extrinsic.json  lane_detector_node.py  lane_polys.json  object_detector_node.py  speed_estimator_node.py  tracker_node.py  video_publisher.py
perception/src/perception/: calibration_manager.py  lane_utils.py  perception_utils.py  yolo_detector.py
perception/src/perception_lib/: calibration_manager.py
perception_test/: CMakeLists.txt  package.xml  read.txt
perception_test/calibration_logs/1/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/10/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/11/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/12/: dist_analysis.csv  id_analysis.csv
perception_test/calibration_logs/13/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/14/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/15/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/16/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/17/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/18/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/19/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/2/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/20/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/21/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/22/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/23/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/3/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/4/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/5/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/calibration_logs/6/: dist_analysis.csv  id_analysis.csv  raw_main.csv
perception_test/config/: camera_intrinsic.yaml  camera_radar_extrinsic.yaml  center_camera-homography.json  detector.yaml  extrinsic.json  extrinsic.txt  intrinsic.json  lane_polys.json  offline_sources.json  roi_lanes.yaml
perception_test/launch/: perception.launch  perception_dev.launch  radar_camera_monitor.launch
perception_test/models/: read.txt
perception_test/msg/: Detection.msg
perception_test/src/: gui.py  real_gui.py
(+98 files in other folders)
